Styles and visuals started

--- a/css/import/header.styl
+++ b/css/import/header.styl
@@ -69,13 +69,14 @@
 
 	.sal-logo {
 		display: block;
-		min-width: 160px;
+		min-width: 200px;
 		height: 50px;
 		//background-color: $sal-green;
 
 		background-image: url(../svg/logo.svg);
 		background-repeat: no-repeat;
 		background-position: left center;
+		border-bottom: 0;
 	}
 
 	.sal-search {
@@ -140,7 +141,7 @@
 
 .sal-categories {
 	padding: 10px 0;
-	margin: 20px 0;
+	margin: 20px 0 0;
 	border-top:    1px solid rgba(230, 230, 230, 1);
 	border-bottom: 1px solid rgba(230, 230, 230, 1);
 
