--- a/css/style.styl
+++ b/css/style.styl
@@ -1,4 +1,4 @@
-use('../../../node_modules/stylobuild', {
+use('node_modules/stylobuild', {
 	autoprefixer: { browsers: "last 2 version, Explorer >=8"},
 	csso: true,
 	pixrem: false
@@ -59,3 +59,6 @@ $sal-green = rgba(142, 178, 98, 1);
 @import 'import/login.styl';
 
 @import 'import/shop.styl';
+@import 'import/basket.styl';
+@import 'import/itemView.styl';
+@import 'import/catView.styl';
