--- a/css/import/ui.styl
+++ b/css/import/ui.styl
@@ -4,7 +4,7 @@
 		display: inline-block;
 		cursor: pointer;
 
-		box-sizing: content-box;
+		//box-sizing: content-box;
 
 		//border: 4px solid transparent;
 		padding: 0 20px;
