Styles and visuals continued

--- a/css/import/layout.styl
+++ b/css/import/layout.styl
@@ -11,7 +11,7 @@
 	justify-content: space-between;
 }
 
-.sal-header, .sal-content, .sal-footer {
+.sal-content, .sal-footer {
 	width: 100%;
 	padding: 0 40px;
 
