--- a/css/style.styl
+++ b/css/style.styl
@@ -26,7 +26,7 @@ body {
 	font-family: 'Noto Sans', sans-serif;
 	line-height: 15px;
 	font-size: 13px;
-	background-image: url(../img/fish.jpg);
+	//background-image: url(../img/fish.jpg);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -58,7 +58,11 @@ $sal-green = rgba(142, 178, 98, 1);
 @import 'import/typo.styl';
 @import 'import/login.styl';
 
-@import 'import/shop.styl';
-@import 'import/basket.styl';
-@import 'import/itemView.styl';
-@import 'import/catView.styl';
+// Plugins
+@import 'import/fotorama.styl';
+@import 'import/sly.styl';
+
+@import 'import/shop_basket.styl';
+@import 'import/shop_mainPage.styl';
+@import 'import/shop_itemView.styl';
+@import 'import/shop_catView.styl';
