--- a/css/import/header.styl
+++ b/css/import/header.styl
@@ -1,6 +1,9 @@
 .sal-header {
+	margin: 0 0 20px;
 
 	&__inner {
+		max-width: 1100px;
+		margin: 0 auto;
 	}
 
 	&__menu {
@@ -9,9 +12,13 @@
 
 		background-color: $sal-light-bg;
 
-		display: flex;
-		justify-content: flex-end;
-		align-items: center;
+		&__inner {
+			margin: 0 auto;
+			max-width: 1100px;
+			display: flex;
+			justify-content: flex-end;
+			align-items: center;
+		}
 
 		&__item {
 			margin-left: 20px;
