Styles and visuals continued

--- a/css/import/shop_catView.styl
+++ b/css/import/shop_catView.styl
@@ -78,6 +78,7 @@
 					background: #8eb262 !important;
 					border-color: #8eb262 !important;
 					cursor: pointer !important;
+					outline: none !important;
 				}
 			}
 
