--- a/css/style.styl
+++ b/css/style.styl
@@ -53,8 +53,8 @@ $sal-green = rgba(142, 178, 98, 1);
 @import 'import/ui.styl';
 @import 'import/layout.styl';
 @import 'import/header.styl';
-@import 'import/advert.styl';
 @import 'import/footer.styl';
+@import 'import/advert.styl';
 @import 'import/typo.styl';
 @import 'import/login.styl';
 
@@ -66,3 +66,5 @@ $sal-green = rgba(142, 178, 98, 1);
 @import 'import/shop_mainPage.styl';
 @import 'import/shop_itemView.styl';
 @import 'import/shop_catView.styl';
+
+@import 'import/adaptivity.styl';
