--- a/css/import/shop_mainPage.styl
+++ b/css/import/shop_mainPage.styl
@@ -65,10 +65,11 @@
 			background: center center no-repeat;
 			background-size: cover;
 			border: 0;
-			padding: 65px 75px 0;
+			padding: 35px 75px 0;
 			color: #fff;
 			font-weight: bold;
 			font-size: 60px;
+			line-height: normal;
 			text-shadow: 0 0 3px #000;
 		}
 
